refactor: minor changes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.svg" />
+    <link rel="icon" href="./favicon.svg" />
     <title>Speak like Shakespeare</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <meta name="color-scheme" content="dark" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="hero">Speak like <span>Shakespeare</span></header>
@@ -32,6 +33,6 @@
         >TejasxShekar</a
       >
     </footer>
-    <script src="/js/app.js" type="text/javascript"></script>
+    <script src="./js/app.js" type="text/javascript"></script>
   </body>
 </html>
