--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     >
     <footer>
       Made by
-      <a href="https://portfolio-of-tejas.netlify.app" target="_blank"
+      <a href="https://tejasshekar.netlify.app/" target="_blank"
         >TejasxShekar</a
       >
     </footer>
